# chess_engine

./: .gitignore  CMakeLists.txt  README.md  improvements.txt  notes.txt  roadmap.txt
include/: attacks.hpp  between.hpp  bitboards.hpp  constants.hpp  debug.hpp  eval.hpp  evaluation.hpp  fen_strings.hpp  hash.hpp  make_move.cpp  make_move.hpp  move_generation.hpp  moves.hpp  position.hpp  search.hpp  tt.hpp  types.hpp  uci.hpp  zobrist.hpp
src/: attacks.cpp  between.cpp  bitboards.cpp  check.cpp  debug.cpp  eval.cpp  evaluation.cpp  gen_move.cpp  hash.cpp  main.cpp  make_move.cpp  moveGen.cpp  move_generation.cpp  moves.cpp  position.cpp  search.cpp  tt.cpp  uci.cpp  zobrist.cpp
znotes/: improvements.txt  notes.txt  roadmap.txt
